vlib/v/checker/tests/struct_match_same_type_node.out
vlib/v/checker/tests/struct_match_same_type_node.vv:10:3: error: cannot match a type with itself
    8 | fn (mut t Type) returns() Union {
    9 |     match t {
   10 |         Type {
      |         ~~~~
   11 |             t.something = 'else'
   12 |         }
